danger button fixed + align

--- a/src/styles.css
+++ b/src/styles.css
@@ -24,13 +24,6 @@ input[type="button"].button-primary, button.button-primary, button {
   border-color: #ccc;
 }   
 
-button.btn-danger{
-    background:#d60b0b;
-    border-color: #ccc;
-    color: #ffffff;
-}
-
-
 .button:hover,
 button:hover,
 input[type="submit"]:hover,
@@ -68,10 +61,16 @@ input[type="button"].button-primary:focus {
   border-color: #888;
 }
 
-
 button[disabled], 
 button[disabled]:hover{
     background:#ccc;
     border-color: #ccc;
     text-shadow:none;
-    cursor: no-drop}
+    cursor: no-drop
+}
+
+button.button-danger{
+    color: #FFF;
+    background-color:#d60b0b;
+}
+
